<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Weather</string>

    <string name="action_previous">Previous</string>
    <string name="title_template_step">Step <xliff:g id="step_number"></xliff:g>: page</string>
    <string name="title_template_step_2">Step <xliff:g id="step_number">%1$d</xliff:g>: Brand New</string>
    <string name="action_finish">Finish</string>
    <string name="action_next">Next</string>
    <string name="title_screen_slide">Screen Slide</string>

    <string name="menu_item_settings">Settings</string>

    <string name="location">Location</string>
    <string name="date_time">Date Time</string>
    <string name="temperature">Tp</string>
    <string name="condition">Condition</string>
    <string name="current_day">Day</string>
    <string name="current_date">Date</string>

    <string name="forecast_day">Day</string>
    <string name="forecast_text">Text</string>
    <string name="forecast_high">High</string>
    <string name="forecast_low">Low</string>
    <string name="current_wind">Wind</string>
    <string name="description">Text</string>
    <string name="current_high_temp">high</string>
    <string name="current_low_temp">low</string>
    <string name="current_lat">Lat</string>
    <string name="current_long">Long</string>
    <string name="forecast">Forecast</string>

    <string name="setting_lengthUnits">Length units</string>
    <string name="setting_speedUnits">Speed units</string>
    <string name="setting_tempUnits">Temperature units</string>
    <string name="setting_pressureUnits">Pressure units</string>
    <string name="setting_auto_detect_location">Detect Location</string>
    <string name="setting_unit_mps">Meters per second (m/s)</string>
    <string name="setting_unit_kph">Kilometers per hour (kph)</string>
    <string name="setting_unit_mph">Miles per hour (mph)</string>
    <string name="setting_wind_direction_format">Wind direction format</string>
    <string name="settings_none">None</string>

    <string name="setting_unit_Celsuis">Celsius</string>
    <string name="setting_unit_Fahrenheit">Fahrenheit</string>
    <string name="setting_unit_Kelvin">Kelvin</string>

    <string name="setting_unit_mm">Millimeters (mm)</string>
    <string name="setting_unit_in">Inches (in)</string>

    <string name="setting_unit_hpa">hPa</string>
    <string name="setting_unit_kpa">kPa</string>
    <string name="setting_unit_mmhg">mm Hg</string>

    <string name="speed_unit_mps">m/s</string>
    <string name="speed_unit_kph">kph</string>
    <string name="speed_unit_mph">mph</string>

    <string name="wind_direction_format_none">No indication</string>
    <string name="wind_direction_format_arrows">Arrows</string>
    <string name="wind_direction_format_abbreviations">Abbreviations</string>

    <string name="pressure_unit_hpa">hPa</string>
    <string name="pressure_unit_kpa">kPa</string>
    <string name="pressure_unit_mmhg">mm Hg</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="msg_err_parsing_json">Error parsing JSON.</string>
    <string name="msg_connection_problem">There is a problem with your internet connection.</string>
    <string name="msg_connection_not_available">Connection not available.</string>
    <string name="msg_city_not_found">Specified city is not found.</string>

    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>
    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>

    <string name="wind_direction_north">N</string>
    <string name="wind_direction_north_north_east">NNE</string>
    <string name="wind_direction_north_east">NE</string>
    <string name="wind_direction_east_north_east">ENE</string>
    <string name="wind_direction_east">E</string>
    <string name="wind_direction_east_south_east">ESE</string>
    <string name="wind_direction_south_east">SE</string>
    <string name="wind_direction_south_south_east">SSE</string>
    <string name="wind_direction_south">S</string>
    <string name="wind_direction_south_south_west">SSW</string>
    <string name="wind_direction_south_west">SW</string>
    <string name="wind_direction_west_south_west">WSW</string>
    <string name="wind_direction_west">W</string>
    <string name="wind_direction_west_north_west">WNW</string>
    <string name="wind_direction_north_west">NW</string>
    <string name="wind_direction_north_north_west">NNW</string>
    <string name="msg_too_many_requests">Too many requests. Please try again.</string>
    <string name="hourly_text">Text</string>
    <string name="hourly_time">Time</string>
    <string name="hourly_high">High</string>
    <string name="hourly_low">Low</string>

    <!--Settings default value-->
    <string name="pref_location_default">Dhaka</string>
    <string name="pref_temperature_unit_default">C</string>
    <string name="pref_length_unit_default">mm</string>
    <string name="pref_speed_unit_default">m/s</string>
    <string name="pref_pressure_unit_default">hPa</string>
    <string name="pref_wind_direction_format_default">arrow</string>

    <!--Array values-->
    <string name="temperature_unit_value_c">C</string>
    <string name="temperature_unit_value_f">F</string>
    <string name="temperature_unit_value_k">K</string>

    <string name="length_unit_value_mm">mm</string>
    <string name="length_unit_value_in">in</string>

    <string name="speed_unit_value_mps">m/s</string>
    <string name="speed_unit_value_kph">kph</string>
    <string name="speed_unit_value_mph">mph</string>

    <string name="pressure_unit_value_hpa">hpa</string>
    <string name="pressure_unit_value_kpa">kpa</string>
    <string name="pressure_unit_value_mmhg">mm hg</string>

    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
    <!-- Strings for formatting weather-related data -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>%2$s</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in mps [CHAR LIMIT=25] -->
    <string name="format_wind_mps">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> m/s <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="and">And</string>


    <string name="search_title">Search for city</string>

</resources>
