<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location"
        android:id="@+id/tvLocation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/current_day"
        android:id="@+id/tvDay"
        android:layout_below="@+id/tvLocation"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:singleLine="false"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/current_date"
        android:id="@+id/tvDate"
        android:layout_below="@+id/tvDay"
        android:layout_marginTop="5dp"
        android:textSize="18dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weatherImg"
        android:src="@drawable/icon_na"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/tvHumidity" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/temperature"
        android:id="@+id/tvTemperature"
        android:gravity="center"
        android:textStyle="bold"
        android:typeface="serif"
        android:layout_alignBottom="@+id/weatherImg"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/weatherImg"
        android:textSize="75sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/description"
        android:id="@+id/tvDescription"
        android:gravity="center"
        android:textSize="22sp"
        android:layout_below="@+id/weatherImg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/current_wind"
        android:id="@+id/tvWind"
        android:layout_below="@+id/tvDate"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Humidity"
        android:id="@+id/tvHumidity"
        android:layout_below="@+id/tvWind"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:textSize="18sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/tvDate"
        android:layout_alignStart="@+id/tvTemperature">

        <TextView
            android:id="@+id/tvHighTemp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/current_high_temp"
            android:textSize="22sp"
            android:gravity="right"/>

        <TextView
            android:id="@+id/tvLowTemp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/current_low_temp"
            android:textSize="22sp"
            android:gravity="right"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Sunrise"
        android:gravity="center"
        android:id="@+id/tvSunrise"
        android:layout_below="@+id/tvDescription"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Sunset"
        android:id="@+id/tvSunset"
        android:gravity="center"
        android:layout_below="@+id/tvSunrise"
        android:layout_centerHorizontal="true"
        android:paddingTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecast"
        android:id="@+id/tvShowForecast"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/tvHumidity"
        android:textSize="20sp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="10dp"
        android:textColor="#050a85" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="F/C"
        android:id="@+id/tvF_C"
        android:textSize="30sp"
        android:layout_marginRight="0dp"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/tvTemperature" />


</RelativeLayout>