<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/hourly_time"
        android:id="@+id/tvTime"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="25sp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/hourly_text"
        android:id="@+id/tvDescription"
        android:layout_below="@+id/tvTime"
        android:layout_alignParentStart="true"
        android:textSize="12sp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hourly_high"
        android:id="@+id/tvHigh"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hourly_low"
        android:id="@+id/tvLow"
        android:layout_below="@+id/tvHigh"
        android:layout_alignParentEnd="true"
        android:textColor="#000000"
        android:layout_gravity="right" />

    <RelativeLayout
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/tvTime"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="10"
            android:textSize="20sp"
            android:id="@+id/textView"
            android:textColor="#000000"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="icon"
            android:id="@+id/tvWeatherIcon"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <!--<LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvHigh"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/hourlyImg"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Temp"
            android:id="@+id/tvTemp"
            android:layout_weight="1"/>

    </LinearLayout>-->





</RelativeLayout>